--- a/codes/5_adam_reduced_layers_convo_dropout_removed.ipynb
+++ b/codes/5_adam_reduced_layers_convo_dropout_removed.ipynb
@@ -30,7 +30,7 @@
     "from keras.models import load_model\n",
     "from keras.callbacks import ModelCheckpoint\n",
     "\n",
-    "csv=CSVLogger(\"3_adam_reduced_layers_convo_dropout_removed.log\")\n",
+    "csv=CSVLogger(\"5_adam_reduced_layers_convo_dropout_removed.log\")\n",
     "#filepath=\"weights-improvement-{epoch:02d}-{val_acc:.2f}.hdf5\"\n",
     "#checkpoint = ModelCheckpoint(filepath, monitor='val_acc', verbose=1, save_best_only=True, mode='max')\n",
     "\n",
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -82,13 +82,14 @@
     "\n",
     "curr_path = os.getcwd()\n",
     "basefolder = os.path.dirname(curr_path)\n",
-    "\"\"\"\n",
+    "\n",
     "train_folder = os.path.join(basefolder, \"Dataset\\\\Train\")\n",
     "test_folder = os.path.join(basefolder, \"Dataset\\\\dev\")\n",
     "\"\"\"\n",
     "# Changes for linux\n",
     "train_folder = os.path.join(basefolder, \"Dataset/Train\")\n",
     "test_folder = os.path.join(basefolder, \"Dataset/dev\")\n",
+    "\"\"\"\n",
     "train_set = train_datagen.flow_from_directory(train_folder,target_size=(224, 224),batch_size=32,class_mode='categorical',color_mode='grayscale')\n",
     "\n",
     "test_set = test_datagen.flow_from_directory(test_folder,target_size=(224, 224),batch_size=32,class_mode='categorical',color_mode='grayscale')"
@@ -96,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -104,10 +105,25 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      " - 10749s - loss: 2.8909 - acc: 0.1012 - val_loss: 3.1229 - val_acc: 0.0852\n",
+      "261s - loss: 2.8705 - acc: 0.1107 - val_loss: 3.2592 - val_acc: 0.1000\n",
       "Epoch 2/10\n",
-      " - 10766s - loss: 2.3889 - acc: 0.2532 - val_loss: 2.5996 - val_acc: 0.1959\n",
-      "Epoch 3/10\n"
+      "258s - loss: 2.3528 - acc: 0.2651 - val_loss: 2.7025 - val_acc: 0.1904\n",
+      "Epoch 3/10\n",
+      "257s - loss: 1.8056 - acc: 0.4330 - val_loss: 2.6987 - val_acc: 0.1504\n",
+      "Epoch 4/10\n",
+      "258s - loss: 1.3864 - acc: 0.5666 - val_loss: 2.9946 - val_acc: 0.2146\n",
+      "Epoch 5/10\n",
+      "259s - loss: 1.0845 - acc: 0.6583 - val_loss: 2.8489 - val_acc: 0.2055\n",
+      "Epoch 6/10\n",
+      "261s - loss: 0.8714 - acc: 0.7245 - val_loss: 2.8685 - val_acc: 0.2603\n",
+      "Epoch 7/10\n",
+      "263s - loss: 0.7196 - acc: 0.7702 - val_loss: 3.2512 - val_acc: 0.3054\n",
+      "Epoch 8/10\n",
+      "262s - loss: 0.6113 - acc: 0.8045 - val_loss: 3.6329 - val_acc: 0.2404\n",
+      "Epoch 9/10\n",
+      "262s - loss: 0.5314 - acc: 0.8280 - val_loss: 3.5852 - val_acc: 0.2600\n",
+      "Epoch 10/10\n",
+      "262s - loss: 0.4649 - acc: 0.8482 - val_loss: 3.6957 - val_acc: 0.2411\n"
      ]
     }
    ],
@@ -118,7 +134,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -132,7 +148,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
