--- a/codes/4_adam_custom_loss_function.ipynb
+++ b/codes/4_adam_custom_loss_function.ipynb
@@ -602,6 +602,7 @@
    "outputs": [],
    "source": [
     "from keras import backend as K\n",
+    "\"\"\"\n",
     "def custom_loss(y_true, y_pred):\n",
     "    # scale predictions so that the class probas of each sample sum to 1\n",
     "    y_pred /= K.sum(y_pred, axis=-1, keepdims=True)\n",
@@ -610,6 +611,10 @@
     "    # calc\n",
     "    loss = y_true * K.log(y_pred) * weights\n",
     "    loss = -K.sum(loss, -1)\n",
+    "    return loss\n",
+    "\"\"\"\n",
+    "def custom_loss(y_true, y_pred):\n",
+    "    exp_y\n",
     "    return loss\n"
    ]
   },
@@ -661,9 +666,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:tensorflow-gpu]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-tensorflow-gpu-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -675,7 +680,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.5.4"
   }
  },
  "nbformat": 4,
