deleted dat file

--- a/codes/7_Encoding_with_activation.ipynb
+++ b/codes/7_Encoding_with_activation.ipynb
@@ -141,6 +141,26 @@
    "source": [
     "classifier.save(\"7_Encoding_with_activation.h5\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Variable 'convo1/kernel:0' shape=(2, 2, 1, 32) dtype=float32_ref>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "classifier.weights[0]"
+   ]
   }
  ],
  "metadata": {
