Batch_norm_removed

--- a/codes/2_adam.ipynb
+++ b/codes/2_adam.ipynb
@@ -179,9 +179,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:tensorflow]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-tensorflow-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
