--- a/codes/train_dev_combine.ipynb
+++ b/codes/train_dev_combine.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
@@ -25,7 +23,7 @@
     {
      "data": {
       "text/plain": [
-       "'C:\\\\Users\\\\HarshGupta\\\\ml\\\\sem 6 projects\\\\LipNet\\\\codes'"
+       "'/home/saquib/Documents/LipNet/codes'"
       ]
      },
      "execution_count": 2,
@@ -40,9 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "os.chdir('..')"
@@ -51,9 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "os.chdir('Dataset')\n",
@@ -82,9 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "train = np.array(train)\n",
@@ -100,6 +92,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/home/saquib/anaconda3/envs/tensorflow/lib/python3.5/site-packages/h5py/__init__.py:34: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n",
       "Using TensorFlow backend.\n"
      ]
     }
@@ -123,10 +117,18 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /home/saquib/anaconda3/envs/tensorflow/lib/python3.5/site-packages/keras/backend/tensorflow_backend.py:1340: calling reduce_mean (from tensorflow.python.ops.math_ops) with keep_dims is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "keep_dims is deprecated, use keepdims instead\n"
+     ]
+    }
+   ],
    "source": [
     "csv=CSVLogger(\"train_dev_combine.log\")\n",
     "#filepath=\"weights-improvement-{epoch:02d}-{val_acc:.2f}.hdf5\"\n",
@@ -147,7 +149,6 @@
     "# Step 2 - Pooling\n",
     "classifier.add(MaxPooling2D(pool_size = (2,2)))\n",
     "\n",
-    "classifier.add(BatchNormalization())\n",
     "classifier.add(GlobalAveragePooling2D())\n",
     "# As our model is still facing the problem so, we need to increase the regulization\n",
     "classifier.add(Dropout((0.5)))\n",
@@ -156,25 +157,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 22,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "classifier.compile(optimizer = 'adam', loss = 'categorical_crossentropy', metrics = ['accuracy'])"
+    "classifier.compile(optimizer = Adam(epsilon = 0.01,lr = 0.01), loss = 'categorical_crossentropy', metrics = ['accuracy'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\HarshGupta\\Anaconda3\\lib\\site-packages\\sklearn\\cross_validation.py:44: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
+      "/home/saquib/anaconda3/envs/tensorflow/lib/python3.5/site-packages/sklearn/cross_validation.py:41: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
       "  \"This module will be removed in 0.20.\", DeprecationWarning)\n"
      ]
     }
@@ -190,28 +189,24 @@
     "collapsed": true
    },
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "X_train,X_test,y_train,y_test = train_test_split(train,label,test_size = 0.25)"
+    "from keras import backend as K"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(2100, 224, 224)"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "X_train.shape"
+    "import keras "
    ]
   },
   {
@@ -222,7 +217,7 @@
     {
      "data": {
       "text/plain": [
-       "(2100,)"
+       "(2800, 224, 224)"
       ]
      },
      "execution_count": 12,
@@ -231,211 +226,111 @@
     }
    ],
    "source": [
-    "y_train.shape"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- ## Scaling the data"
+    "train.shape"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from keras import backend as K"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "img_rows = 224\n",
-    "img_cols = 224"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "if K.image_data_format() == 'channels_first':\n",
-    "    input_shape = (1, img_rows, img_cols)\n",
-    "else:\n",
-    "    input_shape = (img_rows, img_cols, 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(224, 224, 1)"
+       "(2800,)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "input_shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(2100, 224, 224)"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_train.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "X_train_s = X_train.reshape((X_train.shape[0],) + input_shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "X_test_s = X_test.reshape((X_test.shape[0],) + input_shape)\n",
-    "X_train_s = X_train_s.astype('float32')\n",
-    "X_test_s = X_test_s.astype('float32')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((2100, 224, 224, 1), (700, 224, 224, 1))"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_train_s.shape,X_test_s.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "X_train_s /= 255\n",
-    "X_test_s /= 255"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x_train shape: (2100, 224, 224)\n",
-      "2100 train samples\n",
-      "700 test samples\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('x_train shape:', X_train.shape)\n",
-    "print(X_train.shape[0], 'train samples')\n",
-    "print(X_test.shape[0], 'test samples')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import keras "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "y_train = keras.utils.to_categorical(y_train, 20)\n",
-    "y_test = keras.utils.to_categorical(y_test, 20)"
+    "label.shape"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "def start(i):\n",
+    "    X_train,X_test,y_train,y_test = train_test_split(train,label,test_size = 0.2)\n",
+    "    X_shape = X_train.shape\n",
+    "    print('Epoch-{}'.format(i))\n",
+    "    img_rows = 224\n",
+    "    img_cols = 224\n",
+    "    if K.image_data_format() == 'channels_first':\n",
+    "        input_shape = (1, img_rows, img_cols)\n",
+    "    else:\n",
+    "        input_shape = (img_rows, img_cols, 1)\n",
+    "    X_train_s = X_train.reshape((X_train.shape[0],) + input_shape)\n",
+    "    X_train_s = X_train_s.astype('float32')\n",
+    "    X_test_s = X_test.reshape((X_test.shape[0],) + input_shape)\n",
+    "    X_test_s = X_test_s.astype('float32')\n",
+    "    X_train_s /= 255\n",
+    "    X_test_s /= 255\n",
+    "    y_train = keras.utils.to_categorical(y_train, 20)\n",
+    "    y_test = keras.utils.to_categorical(y_test, 20)\n",
+    "    classifier.fit(X_train_s,y_train,batch_size=32,epochs=1,validation_data=(X_test_s, y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(2100, 20)"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scaling the data\n",
+      "Train on 2240 samples, validate on 560 samples\n",
+      "Epoch 1/1\n",
+      "2240/2240 [==============================] - 209s 93ms/step - loss: 2.9993 - acc: 0.0473 - val_loss: 2.9963 - val_acc: 0.0464\n",
+      "Scaling the data\n",
+      "Train on 2240 samples, validate on 560 samples\n",
+      "Epoch 1/1\n",
+      "2240/2240 [==============================] - 208s 93ms/step - loss: 2.9974 - acc: 0.0482 - val_loss: 2.9975 - val_acc: 0.0357\n",
+      "Scaling the data\n",
+      "Train on 2240 samples, validate on 560 samples\n",
+      "Epoch 1/1\n",
+      "2240/2240 [==============================] - 205s 92ms/step - loss: 2.9914 - acc: 0.0585 - val_loss: 2.9849 - val_acc: 0.0679\n",
+      "Scaling the data\n",
+      "Train on 2240 samples, validate on 560 samples\n",
+      "Epoch 1/1\n",
+      "2240/2240 [==============================] - 206s 92ms/step - loss: 2.9685 - acc: 0.0674 - val_loss: 3.0047 - val_acc: 0.0661\n",
+      "Scaling the data\n",
+      "Train on 2240 samples, validate on 560 samples\n",
+      "Epoch 1/1\n",
+      "2240/2240 [==============================] - 291s 130ms/step - loss: 2.9636 - acc: 0.0670 - val_loss: 2.9436 - val_acc: 0.0893\n",
+      "Scaling the data\n",
+      "Train on 2240 samples, validate on 560 samples\n",
+      "Epoch 1/1\n",
+      "2240/2240 [==============================] - 221s 99ms/step - loss: 2.9462 - acc: 0.0759 - val_loss: 2.9332 - val_acc: 0.0964\n",
+      "Scaling the data\n",
+      "Train on 2240 samples, validate on 560 samples\n",
+      "Epoch 1/1\n",
+      "2240/2240 [==============================] - 210s 94ms/step - loss: 2.9372 - acc: 0.0737 - val_loss: 2.9317 - val_acc: 0.0893\n",
+      "Scaling the data\n",
+      "Train on 2240 samples, validate on 560 samples\n",
+      "Epoch 1/1\n",
+      "2240/2240 [==============================] - 214s 95ms/step - loss: 2.9281 - acc: 0.0804 - val_loss: 2.9118 - val_acc: 0.0821\n",
+      "Scaling the data\n",
+      "Train on 2240 samples, validate on 560 samples\n",
+      "Epoch 1/1\n",
+      "2240/2240 [==============================] - 209s 93ms/step - loss: 2.9227 - acc: 0.0804 - val_loss: 2.9001 - val_acc: 0.0875\n",
+      "Scaling the data\n",
+      "Train on 2240 samples, validate on 560 samples\n",
+      "Epoch 1/1\n",
+      "2240/2240 [==============================] - 209s 93ms/step - loss: 2.9164 - acc: 0.0719 - val_loss: 2.9038 - val_acc: 0.0946\n"
+     ]
     }
    ],
    "source": [
-    "y_train.shape"
+    "for i in range(10):\n",
+    "    start(i)"
    ]
   },
   {
@@ -444,110 +339,61 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(700, 20)"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y_test.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(700, 224, 224)"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_test.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train on 2100 samples, validate on 700 samples\n",
-      "Epoch 1/15\n",
-      "2100/2100 [==============================] - 306s 146ms/step - loss: 3.0043 - acc: 0.0552 - val_loss: 3.3583 - val_acc: 0.0429\n",
-      "Epoch 2/15\n",
-      "2100/2100 [==============================] - 315s 150ms/step - loss: 2.9981 - acc: 0.0571 - val_loss: 3.0781 - val_acc: 0.0629\n",
-      "Epoch 3/15\n",
-      "2100/2100 [==============================] - 325s 155ms/step - loss: 2.9729 - acc: 0.0795 - val_loss: 3.0892 - val_acc: 0.0500\n",
-      "Epoch 4/15\n",
-      "2100/2100 [==============================] - 291s 139ms/step - loss: 2.9343 - acc: 0.0871 - val_loss: 2.9548 - val_acc: 0.0757\n",
-      "Epoch 5/15\n",
-      "2100/2100 [==============================] - 300s 143ms/step - loss: 2.9071 - acc: 0.0862 - val_loss: 2.9207 - val_acc: 0.0786\n",
-      "Epoch 6/15\n",
-      "2100/2100 [==============================] - 294s 140ms/step - loss: 2.8960 - acc: 0.1019 - val_loss: 2.9698 - val_acc: 0.1014\n",
-      "Epoch 7/15\n",
-      "2100/2100 [==============================] - 289s 138ms/step - loss: 2.8718 - acc: 0.1105 - val_loss: 2.9529 - val_acc: 0.0714\n",
-      "Epoch 8/15\n",
-      "2100/2100 [==============================] - 290s 138ms/step - loss: 2.8651 - acc: 0.1176 - val_loss: 2.9122 - val_acc: 0.0700\n",
-      "Epoch 9/15\n",
-      "2100/2100 [==============================] - 314s 150ms/step - loss: 2.8416 - acc: 0.1295 - val_loss: 2.8729 - val_acc: 0.0971\n",
-      "Epoch 10/15\n",
-      "2100/2100 [==============================] - 324s 154ms/step - loss: 2.8131 - acc: 0.1324 - val_loss: 2.8746 - val_acc: 0.0971\n",
-      "Epoch 11/15\n",
-      "2100/2100 [==============================] - 332s 158ms/step - loss: 2.8132 - acc: 0.1343 - val_loss: 2.8294 - val_acc: 0.1057\n",
-      "Epoch 12/15\n",
-      "2100/2100 [==============================] - 330s 157ms/step - loss: 2.7624 - acc: 0.1529 - val_loss: 2.7881 - val_acc: 0.1143\n",
-      "Epoch 13/15\n",
-      "2100/2100 [==============================] - 339s 162ms/step - loss: 2.7403 - acc: 0.1548 - val_loss: 2.9333 - val_acc: 0.1157\n",
-      "Epoch 14/15\n",
-      "2100/2100 [==============================] - 309s 147ms/step - loss: 2.7203 - acc: 0.1590 - val_loss: 2.7192 - val_acc: 0.1357\n",
-      "Epoch 15/15\n",
-      "2100/2100 [==============================] - 320s 152ms/step - loss: 2.6905 - acc: 0.1705 - val_loss: 2.6953 - val_acc: 0.1371\n"
+      "Epoch-0\n",
+      "Train on 2240 samples, validate on 560 samples\n",
+      "Epoch 1/1\n",
+      "2240/2240 [==============================] - 209s 93ms/step - loss: 2.8915 - acc: 0.0830 - val_loss: 2.8603 - val_acc: 0.0964\n",
+      "Epoch-1\n",
+      "Train on 2240 samples, validate on 560 samples\n",
+      "Epoch 1/1\n",
+      "2240/2240 [==============================] - 207s 92ms/step - loss: 2.8833 - acc: 0.0920 - val_loss: 2.8639 - val_acc: 0.1125\n",
+      "Epoch-2\n",
+      "Train on 2240 samples, validate on 560 samples\n",
+      "Epoch 1/1\n",
+      "2240/2240 [==============================] - 208s 93ms/step - loss: 2.8841 - acc: 0.0879 - val_loss: 2.8497 - val_acc: 0.0839\n",
+      "Epoch-3\n",
+      "Train on 2240 samples, validate on 560 samples\n",
+      "Epoch 1/1\n",
+      "2240/2240 [==============================] - 209s 93ms/step - loss: 2.8855 - acc: 0.0821 - val_loss: 2.8406 - val_acc: 0.1179\n",
+      "Epoch-4\n",
+      "Train on 2240 samples, validate on 560 samples\n",
+      "Epoch 1/1\n",
+      "2240/2240 [==============================] - 233s 104ms/step - loss: 2.8626 - acc: 0.1022 - val_loss: 2.8730 - val_acc: 0.0911\n",
+      "Epoch-5\n",
+      "Train on 2240 samples, validate on 560 samples\n",
+      "Epoch 1/1\n",
+      "2240/2240 [==============================] - 208s 93ms/step - loss: 2.8620 - acc: 0.0942 - val_loss: 2.8952 - val_acc: 0.0929\n",
+      "Epoch-6\n",
+      "Train on 2240 samples, validate on 560 samples\n",
+      "Epoch 1/1\n",
+      "2240/2240 [==============================] - 256s 114ms/step - loss: 2.8574 - acc: 0.0897 - val_loss: 2.8696 - val_acc: 0.1018\n",
+      "Epoch-7\n",
+      "Train on 2240 samples, validate on 560 samples\n",
+      "Epoch 1/1\n",
+      "2240/2240 [==============================] - 271s 121ms/step - loss: 2.8469 - acc: 0.0991 - val_loss: 2.8237 - val_acc: 0.0982\n",
+      "Epoch-8\n",
+      "Train on 2240 samples, validate on 560 samples\n",
+      "Epoch 1/1\n",
+      "2240/2240 [==============================] - 267s 119ms/step - loss: 2.8323 - acc: 0.1076 - val_loss: 2.8389 - val_acc: 0.1071\n",
+      "Epoch-9\n",
+      "Train on 2240 samples, validate on 560 samples\n",
+      "Epoch 1/1\n",
+      "2240/2240 [==============================] - 268s 120ms/step - loss: 2.8658 - acc: 0.1049 - val_loss: 2.8007 - val_acc: 0.0911\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<keras.callbacks.History at 0x494928d0>"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "classifier.fit(X_train_s,y_train,batch_size=16,epochs=15,validation_data=(X_test_s, y_test))"
+    "for i in range(10):\n",
+    "    start(i)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -561,7 +407,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.5.4"
   }
  },
  "nbformat": 4,
