--- a/codes/1_rmsprop.ipynb
+++ b/codes/1_rmsprop.ipynb
@@ -123,9 +123,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:tensorflow-gpu]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-tensorflow-gpu-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -137,7 +137,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.5.4"
   }
  },
  "nbformat": 4,
